[package]
name = "threading-hint"
version = "0.1.0"
authors = ["Aditya Pratap Singh <aditya.pratap.singh@zalando.de>"]
license = "MIT"
build = "build.rs"

[lib]
name = "threading_hint"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.19"

[dependencies]
neon = "0.1.19"
num_cpus = "1.4.0"